Prevent horizontal scrolling on mobile
Haven't completely tested this everywhere

--- a/django/newsocialist/static/css/styles.css
+++ b/django/newsocialist/static/css/styles.css
@@ -21,6 +21,7 @@
     bottom: 0;
     width: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
 }
 
